Bug 39323 - [piketon deep-color] intel_choose_pipe_bpp returned invalid value
Summary: [piketon deep-color] intel_choose_pipe_bpp returned invalid value
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: high normal
Assignee: Jesse Barnes
QA Contact:
URL:
Whiteboard:
Keywords:
: 39466 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-07-18 02:55 UTC by fangxun
Modified: 2017-10-06 14:52 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg file (41.82 KB, text/plain)
2011-07-18 02:55 UTC, fangxun
no flags Details

Description fangxun 2011-07-18 02:55:02 UTC
Created attachment 49239 [details]
dmesg file

System Environment:
--------------------------
Arch:           x86_64
Platform:       piketon
Libdrm:         (master)2.4.26-1-g8d055890d90c3d92647e3d8b98d32630ef87c2c8
Mesa:           (master)1cf06218e483c1e673e2f19df9116e60478edf30
Xserver:       
(master)xorg-server-1.10.99.901-106-g82f5521a6d91ebcd2a4400f6c221ad625edc99a1
Xf86_video_intel: (master)2.15.0-203-g212fa9868767637e8f430485eeb522c99e63fd16
Kernel: (drm-intel-next)6e96e7757a0133a9a66fd9b86cd04b5e7b88122a

Bug detailed description:
-------------------------
With latest drm-intel-next kernel, Call Trace appears when system start up. It only happens on piketon. The last known good commit is a7f08958d7ca69e26ec85fe49c0be3568a565493. The last known bad commit is 6fe5a7e3cac5b60774186a95bbb7555fa604080c.


Reproduce steps:
----------------
1. start system with latest drm-intel-next kernel 
2. dmesg
Comment 1 Jesse Barnes 2011-07-28 17:41:20 UTC
"drm/i915: don't use uninitialized EDID bpc values when picking pipe bpp"

on intel-gfx
Comment 2 Jesse Barnes 2011-08-01 11:29:16 UTC
*** Bug 39466 has been marked as a duplicate of this bug. ***
Comment 3 Florian Mickler 2011-08-08 01:50:22 UTC
A patch referencing this bug report has been merged in Linux v3.1-rc1:

commit 62ac41a6e443ef26b9de862c6e20c088e2b04dde
Author: Jesse Barnes <jbarnes@virtuousgeek.org>
Date:   Thu Jul 28 12:55:14 2011 -0700

    drm/i915: don't use uninitialized EDID bpc values when picking pipe bpp
Comment 4 fangxun 2011-08-10 02:12:33 UTC
Verified with kernel(drm-intel-next) 4e6343898fe7eed6b3c0c3c809347bc88d5b4a1e.
Comment 5 Elizabeth 2017-10-06 14:52:17 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.